[project]
name = "online-game"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Keitaro Miyajima", email = "keitaro.333@studist.jp" }
]
dependencies = [
    "pyxel>=2.2.7",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/online_game"]
